--- a/register.html
+++ b/register.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" type="text/css" href="style.css" />
 	</head>
 <body style="text-align:center; font-family: Arial; font-size:20">
-
+abcd
 <div id="container">
 		<div id="header">
         	<h1>Anime<span class="off">Sharing</span></h1>
